lucicfg/testdata/errors/logdog_without_project.star
core.logdog()

# Expect errors like:
#
# Traceback (most recent call last):
#   //testdata/errors/logdog_without_project.star:1: in <toplevel>
#   ...
# Error: core.logdog("...") refers to undefined core.project("...")
